--- a/static/lecture564/reading02.Rmd
+++ b/static/lecture564/reading02.Rmd
@@ -16,8 +16,16 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ### 2.2.3 Estimation of $\sigma^2$
 `2018.10.3`
+$$SSR=\sum_{i=1}^n(\hat y_i-\bar y)^2=\sum_{i=1}^n(\hat\beta_0+\hat\beta_1x_i-\bar y)^2=\sum_{i=1}^n(\bar y-\bar x\hat\beta_1+\hat\beta_1x_i-\bar y)^2=\hat\beta_1^2\sum_{i=1}^n(x_i-\bar x)^2=\hat\beta_1^2S_{xx}$$
+$$S_{yy}=\sum_{i=1}^n(y_i-\bar y)^2=$$
 
+$$E[SSR]=\sigma^2+\hat\beta_1^2S_{xx}$$
 
+$$E[S_{yy}]=(n-1)\sigma^2+\hat\beta_1^2S_{xx}$$
+
+$$E[SSE]=E[S_{yy}]-E[SSR]=(n-2)\sigma^2$$
+
+$$E[MSE]=\frac{E[SSE]}{n-2}=\frac{\sigma^2(n-2)}{n-2}=\sigma^2$$
 
 ### 2.3 Hypothesis Testing on the Slope and Intercept
 
