--- a/docs/assignment561/hw04.Rmd
+++ b/docs/assignment561/hw04.Rmd
@@ -27,7 +27,7 @@ $$EX=\sum_1^nx\frac1n=\frac1n\frac{n(n+1)}2=\frac{n+1}2,\quad n>0$$
 
 $$EX^2=\sum_1^nx^2\frac1n=\frac1n\frac{n(n+1)(2n+1)}6=\frac{(n+1)(2n+1)}6,\quad n>0$$
 
-$$VarX=EX^2-(EX)^2=\frac{(n+1)(2n+1)}6-(\frac{n+1}2)^2=\frac{(n+1)(4n+2-3n-3)}{12}=\frac{n^2-1}{12},\quad n>0\ ?$$
+$$VarX=EX^2-(EX)^2=\frac{(n+1)(2n+1)}6-(\frac{n+1}2)^2=\frac{(n+1)(4n+2-3n-3)}{12}=\frac{n^2-1}{12},\quad n>0$$
 
 ****
 
@@ -60,7 +60,9 @@ $$\mu_3=E(X-\mu)^3=\int_{-\infty}^{\infty}(x-a)^3f(x)dx=\int_{-\infty}^{a}(x-a)^
 
 Let u=x-a, x=u+a, then
 
-$$\mu_3=\int_{-\infty}^{a}u^3f(u+a)d(u+a)+\int_{a}^{\infty}u^3f(u+a)d(u+a)=\int_{-\infty}^{0}u^3f(u+a)d(u)+\int_{0}^{\infty}u^3f(u+a)d(u)=\int_{0}^{\infty}-u^3f(-u+a)d(u)+\int_{0}^{\infty}u^3f(u+a)d(u)=0$$
+$$\mu_3=\int_{-\infty}^{a}u^3f(u+a)d(u+a)+\int_{a}^{\infty}u^3f(u+a)d(u+a)=\int_{-\infty}^{0}u^3f(u+a)d(u)+\int_{0}^{\infty}u^3f(u+a)d(u)$$
+
+$$=\int_{0}^{\infty}-u^3f(-u+a)d(u)+\int_{0}^{\infty}u^3f(u+a)d(u)=0$$
 
 ****
 
@@ -77,13 +79,14 @@ $$\mu_2=E(X-\mu)^2=EX^2-\mu^2=\int_{0}^{\infty}x^2e^{-x}dx-1=\int_{0}^{\infty}ud
 $$=-x^2e^{-x}\bigg|_0^{\infty}-\int_{0}^{\infty}-e^{-x}2dx-1=0-2e^{-x}\bigg|_0^{\infty}-1=0-0+2-1=1$$
 
 
-$$\mu_3=E(X-\mu)^3=\int_{0}^{\infty}(x-1)^3e^{-x}dx=\int_{0}^{\infty}(x^3-3x^2+3x-1)e^{-x}dx=\Gamma4-3\Gamma3+3\Gamma2-1=3!-3\times2!+3-1=3\ ?****2$$
+$$\mu_3=E(X-\mu)^3=\int_{0}^{\infty}(x-1)^3e^{-x}dx=\int_{0}^{\infty}(x^3-3x^2+3x-1)e^{-x}dx=\Gamma4-3\Gamma3+3\Gamma2-1=3!-3\times2!+3-1=2$$
 
-$$\therefore\quad \alpha_3=\frac{\mu_3}{(\mu_2)^{3/2}}=\frac31=3$$
+$$\therefore\quad \alpha_3=\frac{\mu_3}{(\mu_2)^{3/2}}=\frac21=2$$
 
 ****
 
 (c) Calculate $\alpha_4$ for each of the following pdfs and comment on the peakedness of each.
+Ruppert (1987) uses influence functions (see Miscellanea 10.6.4) to explore further the meaning of kurtosis, and Groeneveld (1991) uses them to explore skewness; see also Balanda and MacGillivray (1988) for more on the interpretation of $\alpha_4$.
 
 $$f(x)=\frac1{\sqrt{2\pi}}e^{-x^2/2},-\infty<x<\infty$$
 
@@ -111,8 +114,12 @@ $$\mu_4=E(X-\mu)^4=(4-1)EX^{4-2}=3(2-1)EX^0=3$$
 
 $$\alpha_4=\frac{\mu_4}{\mu_2^2}=\frac31=3$$
 
-> comment on the peakedness：
+The standard measure of kurtosis, originating with Karl Pearson, is based on a scaled version of the fourth moment of the data or population.There are various interpretations of kurtosis. "...its only unambiguous interpretation is in terms of tail extremity; i.e., either existing outliers (for the sample kurtosis) or propensity to produce outliers (for the kurtosis of a probability distribution)." (Westfall, 2014) This number is related to the tails of the distribution, not its peak. higher kurtosis is the result of infrequent extreme deviations (or outliers), as opposed to frequent modestly sized deviations.
+The kurtosis of any univariate normal distribution is 3 called **mesokurtic**. Distributions with kurtosis less than 3 are said to be **platykurtic**. It means the distribution produces fewer and less extreme outliers than does the normal distribution rather than "flat-topped". Distributions with kurtosis greater than 3 are said to be **leptokurtic**.
 
+[Westfall, P. (2014). Kurtosis as Peakedness, 1905–2014. R.I.P. The American Statistician, 68(3), 191-195.]
+
+Therefore, in this question, the normal distribution with kurtosis equal 3 is mesokurtic.
 
 $$f(x)=\frac12,-1<x<1$$
 
@@ -124,7 +131,7 @@ $$\mu_4=E(X-\mu)^4=\int_{-\infty}^{\infty}x^4\frac12dx=\frac1{10}x^5\bigg|_{-1}^
 
 $$\alpha_4=\frac{\mu_4}{\mu_2^2}=\frac{\frac15}{\frac19}=\frac95$$
 
-> comment on the peakedness：
+In this question, the continuous uniform distribution with kurtosis less than 3 is platykurtic.
 
 
 $$f(x)=\frac12e^{-|x|},-\infty<x<\infty$$
@@ -147,9 +154,7 @@ $$=2(-x^4\frac12e^{-x})\bigg|_{0}^{\infty}-2(\int_{0}^{\infty}\frac12e^{-x}4!dx)
 
 $$\alpha_4=\frac{\mu_4}{\mu_2^2}=\frac{24}{4}=6$$
 
-> comment on the peakedness：
-
-Ruppert (1987) uses influence functions (see Miscellanea 10.6.4) to explore further the meaning of kurtosis, and Groeneveld (1991) uses them to explore skewness; see also Balanda and MacGillivray (1988) for more on the interpreta.tion of $\alpha_4$.
+In this question, the exponential distribution with kurtosis greater than 3 is leptokurtic.
 
 ****
 
@@ -209,11 +214,13 @@ $$M_X(t)=E(e^{tx})=\int_{-\infty}^{\infty}e^{tx}\frac{e^{-\frac{(x-\mu)^2}{2\sig
 
 Transform the part of exponent
 
-$$\frac{-1}{2\sigma^2}[x^2-(2\mu+2\sigma^2t)x+\mu^2]=\frac{-1}{2\sigma^2}[(x-\mu-\sigma^2t)^2-(\mu+\sigma^2t)^2+\mu^2]=\frac{-1}{2\sigma^2}[(x-\mu-\sigma^2t)^2-2\mu\sigma^2t-\sigma^4t^2]=\frac{-1}{2\sigma^2}(x-\mu-\sigma^2t)^2+\mu t+\frac{\sigma^2t^2}2$$
+$$\frac{-1}{2\sigma^2}[x^2-(2\mu+2\sigma^2t)x+\mu^2]=\frac{-1}{2\sigma^2}[(x-\mu-\sigma^2t)^2-(\mu+\sigma^2t)^2+\mu^2]$$
+
+$$=\frac{-1}{2\sigma^2}[(x-\mu-\sigma^2t)^2-2\mu\sigma^2t-\sigma^4t^2]=\frac{-1}{2\sigma^2}(x-\mu-\sigma^2t)^2+\mu t+\frac{\sigma^2t^2}2$$
 
 Let $y=x-\mu-\sigma^2t,\ dy=dx$,
 
-$$\because\int _{-\infty \:}^{\infty \:}\frac{1}{\sqrt{2\pi}\sigma}e^{-\frac{x^2}{2\sigma^2}}dx=1$$
+$$\text{According to the normal distribution}\quad \int _{-\infty \:}^{\infty \:}\frac{1}{\sqrt{2\pi}\sigma}e^{-\frac{x^2}{2\sigma^2}}dx=1$$
 
 $$M_X(t)=\frac{1}{\sqrt{2\pi}\sigma}\int_{-\infty}^{\infty}e^{\frac{-(x-\mu-\sigma^2t)^2}{2\sigma^2}}e^{\mu t+\frac{\sigma^2t^2}2}dx={e^{\mu t+\frac{\sigma^2t^2}2}}\int_{-\infty}^{\infty}\frac1{\sqrt{2\pi}\sigma}e^{\frac{-y^2}{2\sigma^2}}dy=e^{\mu t+\frac{\sigma^2t^2}2}$$
 
