--- a/static/lecture564/reading03.Rmd
+++ b/static/lecture564/reading03.Rmd
@@ -80,7 +80,7 @@ $$\hat{\beta_0}\pm t_{\alpha/2}se(\hat{\beta_0})=4.1\pm3.182\times2.1917=(-2.874
 
 > $100(1-\alpha)%$ Confidence Interval for the true slope $(\beta_1)$:
 
-$$\hat{\beta_1}\pm t_{\alpha/2}se(\hat{\beta_1})=\hat{\beta_1}\pm t_{\alpha/2} \sqrt{\frac{\hat\sigma^2}{S_{xx}}}=\hat{\beta_1}\pm t_{\alpha/2,n-2}\times \sqrt{\dfrac{MSE}{\sum (x_i-\bar{x})^2}}=\hat{\beta_1}\pm t_{\alpha/2,n-2}\times \left(\dfrac{\sqrt{n}\hat{\sigma}}{\sqrt{n-2} \sqrt{\sum (x_i-\bar{x})^2}}\right)$$
+$$\hat{\beta_1}\pm t_{\alpha/2}se(\hat{\beta_1})=\hat{\beta_1}\pm t_{\alpha/2} \sqrt{\frac{\hat\sigma^2}{S_{xx}}}=\hat{\beta_1}\pm t_{\alpha/2,n-2}\times \sqrt{\frac{MSE}{\sum (x_i-\bar{x})^2}}=\hat{\beta_1}\pm t_{\alpha/2,n-2}\times \left(\frac{\sqrt{n}\hat{\sigma}}{\sqrt{n-2} \sqrt{\sum (x_i-\bar{x})^2}}\right)$$
 
 > $100(1-\alpha)%$ Confidence Interval for the true intercept $(\beta_0)$:
 
@@ -124,13 +124,13 @@ $$\hat{y_0}\pm t_{\alpha/2} \sqrt{\hat\sigma^2(1+\frac1n+\frac{(x_0-\bar x)^2}{S
 
 We know $\hat\beta_1$ and $\hat\beta_1$ have normal distributions. Therefore,
 
-$$\hat y=\hat\beta_0+\hat\beta_1x \sim$$
+$$\hat y=\hat\beta_0+\hat\beta_1x \sim N$$
 
 Similarly,
 
-$$\hat y_0|x_0=\hat y_0=\hat\beta_0+\hat\beta_1x_0 \sim$$
+$$\hat y_0|x_0=\hat y_0=\hat\beta_0+\hat\beta_1x_0 \sim N$$
 
-$$\frac{\hat y_0|x_0-(\hat\beta_0+\hat\beta_1x_0)}{se(\hat y_0|x_0)}=\frac{\hat y_0-\bar y_0}{se(\hat y_0)}= \sim$$
+$$\frac{\hat y_0|x_0-(\hat\beta_0+\hat\beta_1x_0)}{se(\hat y_0|x_0)}=\frac{\hat y_0-\bar y_0}{se(\hat y_0)}= \sim t (df=n-2)$$
 
 
 
@@ -162,3 +162,16 @@ There are situations where we know that intercept of the simple linear regressio
 
 $$y_i=\beta_1x_i+\epsilon_i\quad where\ \epsilon_i\sim iid N(0,\sigma^2)$$
 Find the least squares estimator of slope ($\beta_1$) for the simple linear regression model through origin.
+
+$$\hat\beta_1=\frac{\sum_{i=1}^ny_ix_i}{\sum_{i=1}^nx_i^2}$$
+
+$$E(\hat\beta_1)==\beta_1$$
+
+$$E(y_i)=\beta_0+\hat\beta_1x_i$$ is unbiased;
+$$Var(\hat\beta_1)==\frac{\sigma^2}{\sum_{i=1}^nx_i^2}$$
+
+$$se(\hat{\beta_1})=\sqrt{\frac{\sigma^2}{\sum_{i=1}^nx_i^2}}$$
+
+$$\hat{\beta_1}\pm t_\frac\alpha2se(\hat{\beta_1})$$
+
+Where $t_\frac\alpha2$ is critical value from t distribution with df=n-1
