--- a/docs/assignment564/lab00.Rmd
+++ b/docs/assignment564/lab00.Rmd
@@ -8,11 +8,18 @@ output:
     toc_float: false
 ---
 
+
+
 ```{r setup, include=F}
 knitr::opts_chunk$set(message=FALSE, warning=F, echo=TRUE)
 options(width = 2000)
 options(repos="https://cran.rstudio.com")
 ```
+
+
+# {.tabset .tabset-fade .tabset-pills}
+
+## lab 1
 
 A hospital is implementing a program to improve service quality and productivity. As part of this program the hospital management is attempting to measure and evaluate patient satisfaction. Table B.17 contains some of the data that have been collected on a random sample of 25 recently discharged patients.
 Variables:
@@ -139,3 +146,27 @@ t0= (-1.2490+1)/0.1471
 ```
 
  > The result shows that the p_value is 0.1040118, which is bigger than 0.05. Therefore, we can reject the H1 and the ture slope might be same with -1.
+ 
+
+## lab 2
+
+```{r, echo=TRUE}
+# Load the package 
+library(readxl)
+library(tidyverse)
+library(broom)
+# Import Data
+table_plant <- read_table2("Plant.txt")
+# Observe the data frame
+head(table_plant)
+# visualizng Satisfaction and Age
+table_plant %>% ggplot(aes(SolarRadiation,PlantBiomass))+geom_point()+geom_smooth(method="lm", level=0.95)
+# build the model
+model_solar_mass <- lm(PlantBiomass ~ SolarRadiation, data=table_plant)
+model_solar_mass%>% summary()
+confint(model_solar_mass, level = 0.99)
+anova(model_solar_mass)
+model_solar_mass_origin <- lm(PlantBiomass ~ SolarRadiation+0, data=table_plant)
+model_solar_mass_origin%>% summary()
+anova(model_solar_mass_origin)
+```
