--- a/static/assignment561/hw05.Rmd
+++ b/static/assignment561/hw05.Rmd
@@ -11,17 +11,43 @@ output: html_document
 
 The probability of accepting the unacceptable lot is
 
-$$P(X=0|N=100,M=6,k)=\frac{\binom{6}{0}\binom{100-6}{k}}{\binom{100}{k}}<0.10$$
+$$P(X=0|N=100,5<M<(100-K),0<K<(100-m))=\sum_{M=6}^{100-K}\frac{\binom{M}{0}\binom{100-M}{K}}{\binom{100}{K}}=\sum_{M=6}^{100-K}\frac{(100-M)!(100-K)!}{100!(100-M-K)!}$$
 
-$$P(X=0|N=100,5<M<(100-k),k\ge1)=\sum_{M=6}^{100-k}\frac{\binom{M}{0}\binom{100-M}{k}}{\binom{100}{k}}=1-\sum_{M=0}^{5}\frac{\binom{M}{0}\binom{100-M}{k}}{\binom{100}{k}}<0.10$$
- By trail and error?
+For a given probability, When M get the minimum value, the K get the maximum value.
+
+$$Let\quad P(X=0|N=100,M=6,K)=\frac{\binom{6}{0}\binom{100-6}{K}}{\binom{100}{K}}<0.10$$
+
+$$\implies \frac{(100-k)(99-k)(98-k)(97-k)(96-k)(95-k)}{100*99*98*97*96*95}<0.10$$
+
+```{r}
+# failed
+dhyper(0, 6, 94, 32, log = FALSE)
+qhyper(0.1, 6, 94, 32, lower.tail = TRUE, log.p = FALSE)
+
+uniroot(function(k)(dhyper(0, 6, 94, k, log = FALSE)-0.1), lower=0, upper=100)$root
+
+# success
+uniroot(function(k)(qhyper(0.1, 6, 94, k, lower.tail = TRUE, log.p = FALSE)-0.1), lower=0, upper=100)$root
+
+uniroot(function(k)(((100-k)*(99-k)*(98-k)*(97-k)*(96-k)*(95-k))/(100*99*98*97*96*95)-0.1), lower=0, upper=100)$root
+
+```
+
+ When the defective parts are 6, K must be at least 32
 
 ****
 (b) Suppose the manufacturer decides to accept the lot if there is at most one defective in the sample. How large does K have to be to ensure that the probability that the manufacturer accepts an unacceptable lot is less than . 10?
 
-$$P(X=0 or 1|N=100,M=6,k)=\frac{\binom{M}{0}\binom{100-M}{k-0}}{\binom{100}{k}}+\frac{\binom{M}{1}\binom{100-M}{k-1}}{\binom{100}{k}}<0.10$$
+$$P(X=0 or 1|N=100,M=6,K)=\frac{\binom{6}{0}\binom{100-6}{K-0}}{\binom{100}{K}}+\frac{\binom{6}{1}\binom{100-6}{K-1}}{\binom{100}{K}}<0.10$$
 
-$$P(X=0 or 1|N=100,5<M<(100-k),k\ge1)=\sum_{M=6}^{100-k}\frac{\binom{M}{0}\binom{100-M}{k-0}+\binom{M}{1}\binom{100-M}{k-1}}{\binom{100}{k}}<0.10$$
+$$\implies \frac{(95+5k)(100-k)(99-k)(98-k)(97-k)(96-k)}{100*99*98*97*96*95}<0.10$$
+
+```{r}
+uniroot(function(k)(((95+5*k)*(100-k)*(99-k)*(98-k)*(97-k)*(96-k))/(100*99*98*97*96*95)-0.1), lower=0, upper=100)$root
+
+```
+
+When the defective parts are 6, K must be at least 51.
 
 ****
 **3.7** Let the number of chocolate chips i n a certain type of cookie have a Poisson distribution. We want the probability that a randomly chosen cookie has at least two chocolate chips to be greater than .99. Find the smallest value of the mean of the distribution that ensures this probability.
@@ -30,9 +56,14 @@ $$X\sim Poisson(\lambda) \implies P(X=x)=e^{-\lambda}\frac{\lambda^x}{x!}$$
 
 $$P(X\ge 2)\ge0.99 \implies1-P(X\le 1)\le1-0.01$$
 
-$$\therefore P(X\le 1)=P(X=1)+P(X=2)=e^{-\lambda}\frac{\lambda^0}{0!}+ e^{-\lambda}\frac{\lambda^1}{1!}\le0.01$$
+$$\therefore P(X\le 1)=P(X=1)+P(X=2)=e^{-\lambda}\frac{\lambda^0}{0!}+ e^{-\lambda}\frac{\lambda^1}{1!}=(1+\lambda)e^{-\lambda}\le0.01$$
+$$\implies e^{\lambda}\ge100\lambda+100$$
 
+```{R}
+uniroot(function(x)(exp(x)-100*x-100), lower=0, upper=1000)$root
+```
 
+$$\therefore min(EX)=min(\lambda)=7$$
 
 ****
 **3.13** A truncated discrete distribution is one in which a. particular class cannot be observed and is eliminated from the sample space. In particular, if X has range 0, 1, 2, . . . and the 0 class cannot be observed (as is usually the case), the O-truncated random variable $X_T$ has pmf
@@ -78,13 +109,13 @@ $$VarX=E(X_T^2)-[E(X_T)]^2=\frac{rq+r^2q^2}{p^2(1-p^r)}-(\frac{rq}{p(1-p^r)})^2$
 
 ****
 **3.17** Establish a formula similar to (3.3.18) for the gamma distribution. If $X \sim gamma(\alpha, \beta)$, then for any positive constant $\nu$,
-
+<!--
 $$f(x|\alpha,\beta)=\frac1{B(\alpha,\beta)}x^{\alpha-1}(1-x)^{\beta-1}, x \in (0, 1), \beta>0, \alpha>0$$
 
 $$B(\alpha,\beta)=\int_0^1x^{\alpha-1}(1-x)^{\beta-1}dx =\frac{\Gamma(\alpha)\Gamma(\beta)}{\Gamma(\alpha+\beta)}; x \in (0, 1), \beta>0, \alpha>0$$
 
 
-$$(3.3.18)\quad EX^n=\frac{1}{B(\alpha,\beta)}\int_0^1x^nx^{\alpha-1}(1-x)^{\beta-1}dx=\frac{B(a+n,\beta)}{B(\alpha,\beta)}=\frac{\Gamma(\alpha+n)\Gamma(\alpha+\beta)}{\Gamma(\alpha+\beta+n)\Gamma(\alpha)} $$
+$$(3.3.18)\quad EX^n=\frac{1}{B(\alpha,\beta)}\int_0^1x^nx^{\alpha-1}(1-x)^{\beta-1}dx=\frac{B(a+n,\beta)}{B(\alpha,\beta)}=\frac{\Gamma(\alpha+n)\Gamma(\alpha+\beta)}{\Gamma(\alpha+\beta+n)\Gamma(\alpha)} $$ -->
 
 
 $$f(x|\alpha,\beta) = \frac{1}{\Gamma(a)\beta^{\alpha}}x^{a-1}e^{-x/\beta}; x \in (0, \infty), \beta>0, \alpha>0$$
@@ -93,11 +124,11 @@ $$EX= \frac{1}{\Gamma(a)\beta^{\alpha}}\int_0^{\infty}xx^{a-1}e^{-x/\beta}dx=\fr
 
 $$EX^{\nu}=\frac{1}{\Gamma(a)\beta^{\alpha}}\int_0^{\infty}x^{\nu}x^{a-1}e^{-x/\beta}dx=\frac{1}{\Gamma(a)\beta^{\alpha}}\int_0^{\infty}x^{a+\nu-1}e^{-x/\beta}dx=\frac{\Gamma(a+\nu)\beta^{\alpha+\nu}}{\Gamma(a)\beta^{\alpha}}=\frac{\beta^{\nu}\Gamma(\alpha+\nu)}{\Gamma(\alpha)},\nu\ge-\alpha$$
 
-***
+<!--
 
-$$VarX= \alpha^2\beta;\ M_X(t)=\left(\frac{1}{1 - \beta t}\right)^a, t < \frac1\beta$$
+$$VarX= \alpha\beta^2;\ M_X(t)=\left(\frac{1}{1 - \beta t}\right)^a, t < \frac1\beta$$
 
 $$When\quad \beta=1,\quad\Gamma(\alpha)= \int_0^{\infty}t^{\alpha-1}e^{-t}dx$$
 
 
-$$When \beta=\frac1\lambda,\quad(\Gamma (a, \lambda); f(x) = \frac{1}{\Gamma(a)}(\lambda x)^ae^{-\lambda x}\frac{1}{x}; x \in (0, \infty) \frac{a}{\lambda} \frac{a}{\lambda^2} \left(\frac{\lambda}{\lambda - t}\right)^a, t < \lambda)$$
+$$When \beta=\frac1\lambda,\quad(\Gamma (a, \lambda); f(x) = \frac{1}{\Gamma(a)}(\lambda x)^ae^{-\lambda x}\frac{1}{x}; x \in (0, \infty) \frac{a}{\lambda} \frac{a}{\lambda^2} \left(\frac{\lambda}{\lambda - t}\right)^a, t < \lambda)$$ -->
