modify chunks options for 561&564

--- a/docs/assignment564/lab03.Rmd
+++ b/docs/assignment564/lab03.Rmd
@@ -19,7 +19,7 @@ The weight and systolic blood pressure of 26 randomly selected a group of adults
 
  <!--https://rpubs.com/aaronsc32/regression-confidence-prediction-intervals-->
 
-```{r, echo=TRUE}
+```{r, echo=TRUE, results='hide'}
 # Load the package 
 library(readxl)
 library(tidyverse)
